--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,134 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-family: 'Roboto Slab', serif;
 }
+
+header {
+    text-align: center;
+    border-bottom: 4px solid rgb(8, 8, 59);
+    margin-bottom: 2px;
+}
+
+header h1 {
+    color:aliceblue;
+    background-color: rgb(8, 8, 59);
+    font-size: 2em;
+    text-transform: uppercase;
+    padding: 20px;
+    width: 100vw;
+}
+
+header h2 {
+    margin-top: 20px;
+}
+
+header p {
+    margin-top: 8px;
+    margin-bottom: 28px;
+}
+
+fieldset {
+    border-style: none;
+    margin-bottom: 20px;
+}
+
+fieldset legend {
+    border-top: 2px solid rgb(8, 8, 59);
+    width: 100%;
+    margin-top: 20px;
+    padding: 8px;
+    font-weight: bold;
+}
+
+label {
+    font-size: .8em;
+}
+
+button {
+    height: 40px;
+    width: 100%;
+    font-size: 1.2em;
+    background-color: lightgreen;
+}
+
+footer p {
+    text-align: center;
+    font-size: .8em;
+    margin-top: 20px;
+    font-style: italic;
+}
+
+#zip {
+    width: 50%;
+}
+
+.contact {
+    background-color: lightblue;
+}
+
+.newsletter {
+    background-color: lightcyan;
+}
+
+.contact div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 8px;
+}
+
+.newsletter div {
+    padding: 8px;
+}
+
+.newsletter label {
+    padding: 8px;
+}
+
+.newsletter textarea {
+    height: 80px;
+    width: 100%;
+}
+
+input:focus, select:focus, textarea:focus {
+    background-color: lavender;
+    transition-duration: 1s;
+}
+
+input:not(:focus), select:not(:focus), textarea:not(:focus) {
+    background-color: mintcream;
+    transition-duration: 1s;
+}
+
+@media screen and (min-width:768px) {
+    .contact div {
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    .contact label {
+        flex-basis: 8em;
+        flex-shrink: 0;
+        flex-grow: 0;
+    }
+
+    .contact input {
+        flex-basis: 80%;
+    }
+
+    #zip {
+        flex-basis: 20%;
+    }
+
+
+}
+
+
+
+
+
